--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
     "react": "^0.13.3",
+    "react-progress-button": "^1.1.0",
     "react-router": "^0.13.3",
     "react-style": "^0.5.5",
     "reactify": "^1.1.1",
