--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./server/server.js"
   },
   "dependencies": {
+    "babelify": "^6.3.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.10.0",
     "body-parser": "~1.12.4",
@@ -24,7 +25,7 @@
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
     "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react-router": "^0.12.4",
     "react-style": "^0.5.5",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
