--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/server.js"
+    "start": "node ./server/server.js",
+    "test": "./node_modules/mocha/bin/mocha -R nyan spec/ --watch"
   },
   "dependencies": {
     "babelify": "^6.3.0",
@@ -11,6 +12,7 @@
     "bluebird": "^2.10.0",
     "body-parser": "~1.12.4",
     "browserify": "^10.2.4",
+    "chai": "^3.2.0",
     "clone": "^1.0.2",
     "cookie-parser": "^1.3.5",
     "express": "~4.12.4",
@@ -20,11 +22,13 @@
     "hat": "0.0.3",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
+    "mongodb": "^2.0.43",
     "mongoose": "^4.1.2",
+    "mocha": "*",
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
-    "react": "^0.13.3",
+    "react": "^0.12.x",
     "react-router": "^0.12.4",
     "react-style": "^0.5.5",
     "reactify": "^1.1.1",
