--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
-    "react": "^0.13.3",
+    "react": "^0.12.x",
     "react-progress-button": "^1.1.0",
     "react-router": "^0.12.4",
     "react-style": "^0.5.5",
