--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
-    "react": "^0.12.x",
+    "react": "^0.13.x",
     "react-progress-button": "^1.1.0",
-    "react-router": "^0.12.4",
+    "react-router": "^0.13.x",
     "react-style": "^0.5.5",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
