Sets up client side autocomplete
Sets up a simple autocomplete that posts the school names to the
serverm, the server responds with an object that matches those school
names with the respoective schools that they refer to, if it is
undefenid than we can enter the school in ourselves.

Client side it pulls from a google sheet full of all the schools in the
world currently.

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-progress-button": "^1.1.0",
     "react-router": "^0.13.x",
     "react-style": "^0.5.5",
+    "react-typeahead": "^1.1.4",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
