--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-style": "^0.5.5",
     "react-typeahead": "^1.1.4",
     "reactify": "^1.1.1",
+    "request": "^2.64.0",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0"
