--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/server.js",
+    "start": "gulp",
     "test": "./node_modules/mocha/bin/mocha -R nyan spec/ -s 1000 -t 3000"
   },
   "dependencies": {
