--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport": "^0.2.2",
     "react": "^0.13.x",
     "react-date-picker": "^3.1.6",
+    "react-datepicker": "^0.13.0",
     "react-progress-button": "^1.1.0",
     "react-router": "^1.0.0-rc1",
     "react-style": "^0.5.5",
