--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "request": "^2.64.0",
     "underscore": "^1.8.3",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.4.0",
+    "webworkify": "^1.0.2"
   }
 }
