--- a/package.json
+++ b/package.json
@@ -3,34 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "gulp",
+    "start": "node ./server/server.js",
     "test": "./node_modules/mocha/bin/mocha -R nyan spec/ -s 1000 -t 3000"
   },
-  "dependencies": {
-    "async": "^1.4.2",
+  "devDependencies": {
     "babelify": "^6.3.0",
-    "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^2.10.0",
-    "body-parser": "~1.12.4",
     "browserify": "^10.2.4",
     "chai": "^3.2.0",
-    "clone": "^1.0.2",
-    "cookie-parser": "^1.3.5",
-    "envify": "^3.4.0",
-    "express": "~4.12.4",
-    "fast-csv": "^0.6.0",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
-    "hat": "0.0.3",
-    "history": "^1.12.2",
+    "gulp-uglify": "^1.4.2",
     "jquery": "^2.1.4",
     "mocha": "*",
-    "moment": "^2.10.6",
-    "mongodb": "^2.0.43",
-    "mongoose": "^4.1.2",
-    "morgan": "^1.6.1",
-    "mpath": "^0.2.1",
-    "passport": "^0.2.2",
     "react": "^0.13.x",
     "react-date-picker": "^3.1.6",
     "react-datepicker": "^0.13.0",
@@ -41,8 +25,28 @@
     "reactify": "^1.1.1",
     "request": "^2.64.0",
     "underscore": "^1.8.3",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0",
     "webworkify": "^1.0.2"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.10.0",
+    "body-parser": "~1.12.4",
+    "clone": "^1.0.2",
+    "cookie-parser": "^1.3.5",
+    "envify": "^3.4.0",
+    "express": "~4.12.4",
+    "fast-csv": "^0.6.0",
+    "hat": "0.0.3",
+    "history": "^1.12.2",
+    "moment": "^2.10.6",
+    "mongodb": "^2.0.43",
+    "mongoose": "^4.1.2",
+    "morgan": "^1.6.1",
+    "mpath": "^0.2.1",
+    "passport": "^0.2.2"
   }
 }
