--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -15,13 +15,13 @@
     "gulp-uglify": "^1.4.2",
     "jquery": "^2.1.4",
     "mocha": "*",
-    "react": "^0.13.x",
+    "react": "^0.13.3",
     "react-date-picker": "^3.1.6",
     "react-datepicker": "^0.13.0",
     "react-progress-button": "^1.1.0",
     "react-router": "^1.0.0-rc1",
     "react-style": "^0.5.5",
-    "react-typeahead": "^1.1.4",
+    "react-typeahead": "1.1.3",
     "reactify": "^1.1.1",
     "request": "^2.64.0",
     "underscore": "^1.8.3",
@@ -47,6 +47,7 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
-    "passport": "^0.2.2"
+    "passport": "^0.2.2",
+    "react-select": "0.6.12"
   }
 }
