--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -8,21 +8,30 @@
   },
   "devDependencies": {
     "babelify": "^6.3.0",
+    "babyparse": "^0.4.3",
     "browserify": "^10.2.4",
     "chai": "^3.2.0",
+    "es6-promise": "^3.0.2",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-uglify": "^1.4.2",
+    "isomorphic-fetch": "^2.2.0",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "mocha": "*",
     "react": "^0.13.3",
     "react-date-picker": "^3.1.6",
     "react-datepicker": "^0.13.0",
+    "react-dom": "^0.14.3",
     "react-progress-button": "^1.1.0",
+    "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc1",
     "react-style": "^0.5.5",
     "react-typeahead": "1.1.3",
     "reactify": "^1.1.1",
+    "redux": "^3.0.4",
+    "redux-logger": "^2.0.4",
+    "redux-thunk": "^1.0.0",
     "request": "^2.64.0",
     "underscore": "^1.8.3",
     "vinyl-buffer": "^1.0.0",
