--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -20,6 +20,7 @@
     "lodash": "^3.10.1",
     "mocha": "*",
     "react": "^0.13.3",
+    "react-addons-perf": "^0.14.3",
     "react-date-picker": "^3.1.6",
     "react-datepicker": "^0.13.0",
     "react-dom": "^0.14.3",
