--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -31,6 +31,7 @@
     "react-typeahead": "1.1.3",
     "reactify": "^1.1.1",
     "redux": "^3.0.4",
+    "redux-devtools": "^2.1.5",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "request": "^2.64.0",
