--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -19,20 +19,20 @@
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "mocha": "*",
-    "react": "^0.13.3",
+    "react": "^0.14.3",
     "react-addons-perf": "^0.14.3",
-    "react-date-picker": "^3.1.6",
-    "react-datepicker": "^0.13.0",
+    "react-datepicker": "^0.15.2",
     "react-dom": "^0.14.3",
+    "react-modal": "^0.6.1",
     "react-progress-button": "^1.1.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc1",
     "react-select": "^0.6.12",
     "react-style": "^0.5.5",
     "react-typeahead": "1.1.3",
-    "reactify": "^1.1.1",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
+    "redux-log-slow-reducers": "0.0.2",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "request": "^2.64.0",
@@ -59,8 +59,6 @@
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
-    "passport": "^0.2.2",
-    "react-modal": "^0.5.0",
-    "react-select": "0.6.12"
+    "passport": "^0.2.2"
   }
 }
