--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./server/server.js",
+    "postinstall": "./node_modules/.bin/gulp build",
     "test": "./node_modules/mocha/bin/mocha -R nyan spec/ -s 1000 -t 3000"
   },
   "devDependencies": {
@@ -51,7 +52,6 @@
     "cookie-parser": "^1.3.5",
     "envify": "^3.4.0",
     "express": "~4.12.4",
-    "fast-csv": "^0.6.0",
     "hat": "0.0.3",
     "history": "^1.12.2",
     "moment": "^2.10.6",
