--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -48,11 +48,12 @@
     "bluebird": "^2.10.0",
     "body-parser": "~1.12.4",
     "clone": "^1.0.2",
-    "cookie-parser": "^1.3.5",
+    "cookie-parser": "^1.4.0",
     "envify": "^3.4.0",
     "express": "~4.12.4",
     "hat": "0.0.3",
     "history": "^1.12.2",
+    "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongodb": "^2.0.43",
     "mongoose": "^4.1.2",
