--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -4,41 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./server/server.js",
-    "postinstall": "./node_modules/.bin/gulp build",
     "test": "./node_modules/mocha/bin/mocha -R nyan spec/ -s 1000 -t 3000"
   },
   "devDependencies": {
-  },
-  "dependencies": {
-    "async": "^1.4.2",
-    "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^2.10.0",
-    "body-parser": "~1.12.4",
-    "clone": "^1.0.2",
-    "cookie-parser": "^1.4.0",
-    "envify": "^3.4.0",
-    "express": "~4.12.4",
-    "hat": "0.0.3",
-    "history": "^1.12.2",
-    "lodash": "^3.10.1",
-    "moment": "^2.10.6",
-    "mongodb": "^2.0.43",
-    "mongoose": "^4.1.2",
-    "morgan": "^1.6.1",
-    "mpath": "^0.2.1",
-    "passport": "^0.2.2",
-    "babelify": "^6.3.0",
-    "babyparse": "^0.4.3",
-    "browserify": "^10.2.4",
-    "chai": "^3.2.0",
-    "es6-promise": "^3.0.2",
-    "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-uglify": "^1.4.2",
-    "isomorphic-fetch": "^2.2.0",
-    "jquery": "^2.1.4",
-    "lodash": "^3.10.1",
-    "mocha": "*",
     "react": "^0.14.3",
     "react-addons-perf": "^0.14.3",
     "react-datepicker": "^0.15.2",
@@ -60,6 +28,37 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.4.0",
-    "webworkify": "^1.0.2"
+    "webworkify": "^1.0.2",
+    "mocha": "*",
+    "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-uglify": "^1.4.2",
+    "babyparse": "^0.4.3",
+    "babelify": "^6.3.0",
+    "browserify": "^10.2.4",
+    "isomorphic-fetch": "^2.2.0",
+    "es6-promise": "^3.0.2"
+  },
+  "dependencies": {
+    "async": "^1.4.2",
+    "bcrypt-nodejs": "0.0.3",
+    "bluebird": "^2.10.0",
+    "body-parser": "~1.12.4",
+    "clone": "^1.0.2",
+    "cookie-parser": "^1.4.0",
+    "envify": "^3.4.0",
+    "express": "~4.12.4",
+    "hat": "0.0.3",
+    "history": "^1.12.2",
+    "lodash": "^3.10.1",
+    "moment": "^2.10.6",
+    "mongodb": "^2.0.43",
+    "mongoose": "^4.1.2",
+    "morgan": "^1.6.1",
+    "mpath": "^0.2.1",
+    "passport": "^0.2.2",
+    "chai": "^3.2.0",
+    "jquery": "^2.1.4",
+    "lodash": "^3.10.1"
   }
 }
