--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -4,43 +4,34 @@
   "private": true,
   "scripts": {
     "start": "node ./server/server.js",
+    "postinstall": "./node_modules/.bin/gulp build",
     "test": "./node_modules/mocha/bin/mocha -R nyan spec/ -s 1000 -t 3000"
   },
   "devDependencies": {
+    "request": "^2.64.0",
+    "mocha": "*",
+    "watchify": "^3.4.0",
+    "browserify": "^10.2.4",
+    "isomorphic-fetch": "^2.2.0"
+  },
+  "dependencies": {
     "react": "^0.14.3",
-    "react-addons-perf": "^0.14.3",
     "react-datepicker": "^0.15.2",
     "react-dom": "^0.14.3",
-    "react-modal": "^0.6.1",
     "react-progress-button": "^1.1.0",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0-rc1",
     "react-select": "^0.6.12",
-    "react-style": "^0.5.5",
-    "react-typeahead": "1.1.3",
     "redux": "^3.0.4",
-    "redux-devtools": "^2.1.5",
-    "redux-log-slow-reducers": "0.0.2",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
-    "request": "^2.64.0",
-    "underscore": "^1.8.3",
+    "babyparse": "^0.4.3",
+    "babelify": "^6.3.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0",
-    "webworkify": "^1.0.2",
-    "mocha": "*",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-uglify": "^1.4.2",
-    "babyparse": "^0.4.3",
-    "babelify": "^6.3.0",
-    "browserify": "^10.2.4",
-    "isomorphic-fetch": "^2.2.0",
-    "history": "^1.12.2",
-    "es6-promise": "^3.0.2"
-  },
-  "dependencies": {
     "async": "^1.4.2",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.10.0",
