--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./server/server.js",
-    "test": "mocha --compilers js:babel-core/register --recursive spec",
-    "test:watch": "npm test -- --watch"
+    "test": "URL='http://localhost:3000' mocha --compilers js:babel-core/register --recursive spec",
+    "test:watch": "URL='http://localhost:3000' npm test -- --watch",
+    "start-dev": "URL='http://localhost:3000' gulp"
   },
   "devDependencies": {
     "babelify": "^6.3.0",
