--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -53,6 +53,7 @@
     "morgan": "^1.6.1",
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
-    "redux-devtools": "^2.1.5"
+    "redux-devtools": "^2.1.5",
+    "redux-simple-router": "^1.0.0"
   }
 }
