--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./server/server.js",
-    "test": "URL='http://localhost:3000' mocha --compilers js:babel-core/register --recursive spec",
-    "test:watch": "URL='http://localhost:3000' npm test -- --watch",
-    "start-dev": "URL='http://localhost:3000' gulp",
+    "test": "URL='http://localhost:3000' MONGO_URI='mongodb://localhost/matchly-test' mocha --compilers js:babel-core/register --recursive spec",
+    "test:watch": "MONGO_URI='mongodb://localhost/matchly-test' URL='http://localhost:3000' npm test -- --watch",
+    "start-dev": "MONGO_URI='mongodb://localhost/matchly' URL='http://localhost:3000' gulp",
     "build-assets": "URL='http://localhost:3000' gulp build"
   },
   "devDependencies": {
