--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./server/server.js",
     "test": "URL='http://localhost:3000' MONGO_URI='mongodb://localhost/matchly-test' mocha --compilers js:babel-core/register --recursive spec",
-    "test:watch": "npm test --watch",
+    "test:watch": "URL='http://localhost:3000' MONGO_URI='mongodb://localhost/matchly-test' mocha --compilers js:babel-core/register --recursive --watch spec",
     "start-dev": "MONGO_URI='mongodb://localhost/matchly' URL='http://localhost:3000' gulp",
     "build-assets": "URL='http://localhost:3000' gulp build",
     "seed-data": "MONGO_URI='mongodb://localhost/matchly' URL='http://localhost:3000' node scripts/createEmployers.js & node scripts/createSchools.js"
