--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -48,6 +48,7 @@
     "express": "~4.12.4",
     "file-stream-rotator": "0.0.6",
     "hat": "0.0.3",
+    "history": "^1.17.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
     "moment": "^2.10.6",
