--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -7,7 +7,7 @@
     "test": "URL='http://localhost:3000' MONGO_URI='mongodb://localhost/matchly-test' mocha --compilers js:babel-core/register --recursive spec",
     "test:watch": "URL='http://localhost:3000' MONGO_URI='mongodb://localhost/matchly-test' mocha --compilers js:babel-core/register --recursive --watch spec",
     "start-dev": "MONGO_URI='mongodb://localhost/matchly' URL='http://localhost:3000' gulp",
-    "build-assets": "URL='http://localhost:3000' gulp build",
+    "build-assets": "URL='http://matchly.io' gulp build",
     "seed-data": "MONGO_URI='mongodb://localhost/matchly' URL='http://localhost:3000' node scripts/createEmployers.js & node scripts/createSchools.js"
   },
   "devDependencies": {
