--- a/matchly-server/package.json
+++ b/matchly-server/package.json
@@ -58,7 +58,11 @@
     "mpath": "^0.2.1",
     "passport": "^0.2.2",
     "react-fontawesome": "^0.3.3",
-    "redux-devtools": "^2.1.5",
+    "react-router": "^2.0.0-rc4",
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.1",
+    "redux-localstorage": "^0.4.0",
     "redux-simple-router": "^1.0.0"
   }
 }
